# govgate

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/register/: Dockerfile  go.mod  go.sum
apps/register/bench/: baseline.json
apps/register/cmd/govgate/: assess.go  benchregress.go  main.go
apps/register/internal/api/: conditions.go  conditions_integration_test.go  e2e_integration_test.go  http.go  http_integration_test.go  service.go  versioning_integration_test.go
apps/register/internal/checklist/: checklist.go  checklist_test.go  fuzz_test.go
apps/register/internal/register/: register.go
apps/register/internal/scoring/: autocheck.go  bench_test.go  fuzz_test.go  helpers_test.go  property_test.go  scoring.go  scoring_test.go  submission.go
apps/register/internal/store/: conditions.go  (+4 more)
apps/reporter/: Dockerfile  README.md  pyproject.toml
apps/reporter/src/govgate_reporter/: cli.py  extract.py  provider.py  report.py
apps/reporter/tests/: test_cli.py  test_extract.py  test_provider.py  test_report.py  test_report_properties.py
checklists/: default.yaml  strict.yaml
docs/: benchmarks.md  checklist.md  conditional-approval.md  examples.md  extraction.md  register.md  scoring.md  versioning.md
examples/assessments/: acme_chat.json  globex_vision.json  initech_summarizer.json
examples/reports/: acme_chat.md  acme_chat.report.json  globex_vision.md  globex_vision.report.json  initech_summarizer.md  initech_summarizer.report.json
examples/submissions/: acme_chat.json  globex_vision.json  initech_summarizer.json
